Update ServingClaimsReportTest.java