@@ -12,7 +12,6 @@ import uk.gov.hmcts.ecm.common.model.listing.ListingData;
 import uk.gov.hmcts.ecm.common.model.listing.ListingDetails;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -58,7 +57,7 @@ public class ServingClaimsReportTest {
         bfActionType.setNotes("Test Notes One");
         bfActionTypeItem.setId("0011");
         bfActionTypeItem.setValue(bfActionType);
-        caseData.setBfActions(new ArrayList<>(Collections.singletonList(bfActionTypeItem)));
+        caseData.setBfActions(List.of(bfActionTypeItem));
         caseData.setClaimServedDate("2020-08-10");
         submitEvent1.setCaseData(caseData);
 
@@ -80,7 +79,7 @@ public class ServingClaimsReportTest {
         bfActionType2.setNotes("Test Notes Two");
         bfActionTypeItem2.setId("0012");
         bfActionTypeItem2.setValue(bfActionType2);
-        caseData2.setBfActions(new ArrayList<>(Collections.singletonList(bfActionTypeItem2)));
+        caseData2.setBfActions(List.of(bfActionTypeItem2));
         caseData2.setClaimServedDate("2020-08-18");
         submitEvent2.setCaseData(caseData2);
 
@@ -102,7 +101,7 @@ public class ServingClaimsReportTest {
         bfActionType3.setNotes("Test Notes Three");
         bfActionTypeItem3.setId("0013");
         bfActionTypeItem3.setValue(bfActionType3);
-        caseData3.setBfActions(new ArrayList<>(Collections.singletonList(bfActionTypeItem3)));
+        caseData3.setBfActions(List.of(bfActionTypeItem3));
         caseData3.setClaimServedDate("2020-08-25");
         submitEvent3.setCaseData(caseData3);
 
@@ -124,7 +123,7 @@ public class ServingClaimsReportTest {
         bfActionType4.setNotes("Test Notes Four");
         bfActionTypeItem4.setId("0014");
         bfActionTypeItem4.setValue(bfActionType4);
-        caseData4.setBfActions(new ArrayList<>(Collections.singletonList(bfActionTypeItem4)));
+        caseData4.setBfActions(List.of(bfActionTypeItem4));
         caseData4.setClaimServedDate("2020-08-15");
         submitEvent4.setCaseData(caseData4);
 
@@ -146,7 +145,7 @@ public class ServingClaimsReportTest {
         bfActionType5.setNotes("Test Notes Five");
         bfActionTypeItem5.setId("0014");
         bfActionTypeItem5.setValue(bfActionType5);
-        caseData5.setBfActions(new ArrayList<>(Collections.singletonList(bfActionTypeItem5)));
+        caseData5.setBfActions(List.of(bfActionTypeItem5));
         caseData5.setClaimServedDate("2020-08-21");
         submitEvent5.setCaseData(caseData5);
 
